# gpu-learn

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  setup.py
configs/: env.yaml  flashmla_dense_decode.yaml  flashmla_sparse_decode.yaml  flashmla_sparse_prefill.yaml  gemm_persistent.yaml
csrc/: l2_persistent_ext.cpp  l2_persistent_kernel.cu
docs/: data_contracts.md  docker.md  l2_persistent.md  overview.md
docs/agents/: analyzer.md  planner.md  profiler.md  refiner.md  reporter.md  runner.md
docs/phases/: phase_00_env.md  phase_01_gemm.md  phase_02_flashmla_official.md  phase_03_flashmla_end2end.md  phase_04_dense_decode.md  phase_05_sparse_decode.md  phase_06_sparse_prefill.md  phase_07_ncu.md  phase_08_analyze_refine.md  phase_09_report.md
gpu_l2_harness/: __init__.py  analyzer.py  cli.py  env.py  l2_persistent.py  planner.py  profiler.py  reporter.py  runner.py  schemas.py  worker.py
gpu_l2_harness/adapters/: __init__.py  base.py  gemm.py  mock_flashmla.py
gpu_l2_harness/agents/: __init__.py  analyzer_agent.py  base.py  planner_agent.py  profiler_agent.py  refiner_agent.py  reporter_agent.py  runner_agent.py
scripts/: docker_dry_run.sh  docker_shell.sh  dry_run.sh  run_logged.sh  setup_env.sh
tests/: test_docs_handoff.py  test_harness.py
